2007-10-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bumping branch version to 0.8.2.

2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Use
	  Exception.ToString () instead of Exception.Message when logging
	  gnome-keyring-sharp exceptions.

2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Updated NEWS for 0.8.1.

2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bump version to 0.8.1.

2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Synchronization/SyncUtils.cs: Only require lsmod for IsFuseEnabled,
	  and gksu/etc and modprobe for EnableFuse.  Provide appropriate user
	  feedback when these tools are not available when needed.  Note that on
	  Fedora and other distros that don't ship a GUI 'su' tool by default, the
	  user will always receive a "Could not enable FUSE" error dialog until
	  they set the FUSE module up manually.

2007-10-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Synchronization/SyncUtils.cs: Stop looking for bootLocalFile and
	  echoTool; we do not use them (previously used to try to set FUSE to
	  always load).  FindFirstExecutableInPath now searches a few common paths
	  in addition to those found in a user's $PATH.  For now those common
	  paths are /sbin, /bin, and /usr/bin.  This is the first step in fixing
	  bug #484644 and bug #479748.  More work still needs to be done.  For
	  example, if FUSE is enabled it doesn't matter if we can find modprobe or
	  a GUI sudo tool.  Also, the behavior when a GUI sudo tool is not found
	  needs to be tweaked/tested.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy.mdp: Added internal dbus-sharp files to MD solution, mostly just
	  for autocomplete convenience.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/Bugzilla/BugzillaNoteAddin.cs: Removing extraneous debug
	  statements.