@@ -1,15 +1,15 @@
-#!/bin/sh
+#!/bin/bash
 
 if [ "x$PWD" = "x@srcdir@" ] ; then
     echo "*** Running uninstalled @target@ ***"
 
-    export LD_LIBRARY_PATH="../libtomboy/.libs:$LD_LIBRARY_PATH:./Addins/PrintNotes/.libs"
+    export LD_LIBRARY_PATH="../libtomboy/.libs${LD_LIBRARY_PATH+:$LD_LIBRARY_PATH}:./Addins/PrintNotes/.libs"
     export TOMBOY_WRAPPER_PATH="$PWD/@wrapper@"
     export MONO_PATH=$MONO_PATH:./Addins:../Mono.Addins/Mono.Addins:../Mono.Addins/Mono.Addins.Setup:../Mono.Addins/Mono.Addins.Gui
 
     THIS_EXE="--debug ./@target@"
 else
-    export LD_LIBRARY_PATH="@pkglibdir@:$LD_LIBRARY_PATH"
+    export LD_LIBRARY_PATH="@pkglibdir@${LD_LIBRARY_PATH+:$LD_LIBRARY_PATH}"
     export MONO_PATH=$MONO_PATH:@pkglibdir@:@pkglibdir@/addins
     export TOMBOY_WRAPPER_PATH="@bindir@/@wrapper@"
 
