@@ -1,3 +1,10 @@
+2007-11-09  Boyd Timothy <btimothy@gmail.com>
+
+	* Tomboy/tomboy-panel.in, Tomboy/tomboy.in: Applied
+	  patch from Robert Buchholz to fix a security
+	  vulnerability in the startup scripts and LD_LIBRARY_PATH.
+	  Fixes #485224.
+
 2007-10-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* configure.in: Bumping branch version to 0.8.2.
